change style my site

--- a/index.html
+++ b/index.html
@@ -39,126 +39,131 @@
       </div>
 
     </header>
-    <!-- my skills -->
-    <section>
 
-      <div class="skills">
-        <div class="hard--skills">
-          <h2>Hard skills:</h2>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>GIT</li>
-            <li>JS</li>
-            <li>PHOTOSHOP</li>
-          </ul>
-        </div>
-        <div class="soft--skills">
-          <h2>Soft skills:</h2>
-          <ul>
-            <li>English</li>
-            <li>Organization</li>
-            <li>Accuracy</li>
-            <li>High learning</li>
-          </ul>
-        </div>
+    <!-- my skills -->
+    <section class="skills">
+
+      <div class="skills__hard">
+        <h2>Hard skills:</h2>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>GIT</li>
+          <li>JS</li>
+          <li>PHOTOSHOP</li>
+          <li>FIGMA</li>
+          <li>ZEPLIN</li>
+        </ul>
+      </div>
+
+      <div class="skills__soft">
+        <h2>Soft skills:</h2>
+        <ul>
+          <li>English</li>
+          <li>Organization</li>
+          <li>Accuracy</li>
+          <li>High learning</li>
+        </ul>
       </div>
 
     </section>
-    <section>
-      <div class="container">
-        <div class="projects">
-          <h2 class="h2--project">My projects:</h2>
-          <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
-          <a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
-          <a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
-          <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
-          <a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
-          <a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
-          <a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
-          <a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
-          <a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
-          <a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
-          <a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
-          <a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
-          <a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
-          <a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
-          <a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
-          <a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
-          <a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
-          <a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My
-            Animation</a>
-          <a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
-          <a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
-          <a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
-          <a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
-          <a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
-          <a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
-          <a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
-          <a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
-          <a href="../howTo/images/imageWithForm/pictureWithForm.html" class="projects-link">Picture With Form</a>
-          <a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
-          <a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
-          <a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
-          <a href="../howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
-          <a href="../howTo/page/counter.html" class="projects-link">Counter</a>
-          <a href="../howTo/images/miniImage/miniImage.html" class="projects-link">Mini Image</a>
-          <a href="../howTo/table/tableRomashka.html" class="projects-link">Table Menu Cafe</a>
-          <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
-          <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
-          <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
-          <a href="../howTo/page/block3.html" class="projects-link">Animation Block</a>
-          <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
-          <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
-          <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
-          <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
-          <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
-          <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
-          <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
-          <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
-        </div>
-      </div>
+
+    <section class="projects">
+
+
+      <h2 class="projects__title">My projects:</h2>
+      <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
+      <a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
+      <a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
+      <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
+      <a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
+      <a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
+      <a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
+      <a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
+      <a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
+      <a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
+      <a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
+      <a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
+      <a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
+      <a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
+      <a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
+      <a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
+      <a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
+      <a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My
+        Animation</a>
+      <a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
+      <a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
+      <a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
+      <a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
+      <a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
+      <a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
+      <a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
+      <a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
+      <a href="../howTo/images/imageWithForm/pictureWithForm.html" class="projects-link">Picture With Form</a>
+      <a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
+      <a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
+      <a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
+      <a href="../howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
+      <a href="../howTo/page/counter.html" class="projects-link">Counter</a>
+      <a href="../howTo/images/miniImage/miniImage.html" class="projects-link">Mini Image</a>
+      <a href="../howTo/table/tableRomashka.html" class="projects-link">Table Menu Cafe</a>
+      <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
+      <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
+      <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
+      <a href="../howTo/page/block3.html" class="projects-link">Animation Block</a>
+      <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
+      <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
+      <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
+      <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
+      <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
+      <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
+      <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
+      <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
+
+
     </section>
     <footer></footer>
-
-    <!-- Yandex.Metrika counter -->
-    <script>
-      (function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function () {
-            (m[i].a = m[i].a || []).push(arguments);
-          };
-        m[i].l = 1 * new Date();
-        (k = e.createElement(t)),
-        (a = e.getElementsByTagName(t)[0]),
-        (k.async = 1),
-        (k.src = r),
-        a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
-
-      ym(61187872, "init", {
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-        webvisor: true,
-      });
-    </script>
-    <noscript>
-      <div>
-        <img src="https://mc.yandex.ru/watch/61187872" style="position: absolute; left: -9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-
-
-
   </div>
+
+  <!-- Yandex.Metrika counter -->
+  <script>
+    (function (m, e, t, r, i, k, a) {
+      m[i] =
+        m[i] ||
+        function () {
+          (m[i].a = m[i].a || []).push(arguments);
+        };
+      m[i].l = 1 * new Date();
+      (k = e.createElement(t)),
+      (a = e.getElementsByTagName(t)[0]),
+      (k.async = 1),
+      (k.src = r),
+      a.parentNode.insertBefore(k, a);
+    })(
+      window,
+      document,
+      "script",
+      "https://mc.yandex.ru/metrika/tag.js",
+      "ym"
+    );
+
+    ym(61187872, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true,
+    });
+  </script>
+  <noscript>
+
+    <img src="https://mc.yandex.ru/watch/61187872" style="position: absolute; left: -9999px;" alt="" />
+
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
+
+
+
+  </>
 </body>
 
 
