add use bootstrap

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
       <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
       <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
+      <a href="../AndreySavchenkov.github.io/howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>
 
 
     </section>
