--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
       <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
       <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>
+      <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
 
 
     </section>
