delete link html add it on css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="style.css" />
   <title>Andrey Savchenknov</title>
-  <link href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap"
-    rel="stylesheet" />
+  
   <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
 </head>
 
@@ -163,7 +162,13 @@
   </noscript>
   <!-- /Yandex.Metrika counter -->
 
-
+  <p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+      <img style="border:0;width:88px;height:31px"
+        src="//jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Правильный CSS!" />
+    </a>
+  </p>
 
 
 </body>
