--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
       <h2 class="projects__title">My projects:</h2>
       <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
-      <a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
-      <a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
-      <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
-      <a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
+      <!--<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>-->
+      <!--<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>-->
+      <!-- <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a> -->
+      <!-- <a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
       <a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
       <a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
       <a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
@@ -113,12 +113,12 @@
       <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
       <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
       <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
-      <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
+      <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a> -->
       <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
       <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
       <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
       <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
-      <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>
+      <!-- <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a> -->
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
 
 
