--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a> 
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
       <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
+      <a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a>
 
 
     </section>
