add skill swiperJs

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li>PHOTOSHOP</li>
           <li>FIGMA</li>
           <li>ZEPLIN</li>
+          <li>SwiperJS</li>
         </ul>
       </div>
 
