add skill adobe XD

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
           <li>HTML5</li>
           <li>CSS3</li>
           <li>GIT</li>
+          <li>Github</li>
           <li>JS</li>
-          <li>PHOTOSHOP</li>
-          <li>FIGMA</li>
-          <li>ZEPLIN</li>
+          <li>Photoshop</li>
+          <li>Figma</li>
+          <li>Zeplin</li>
+          <li>Adobe XD</li>
           <li>SwiperJS</li>
         </ul>
       </div>
