--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
       <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
       <a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a>
+      <a href="../AndreySavchenkov.github.io/howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>
 
 
     </section>
