add project hipsum blog

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
       <a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a>
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
-      <a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hispum Blog</a>
+      <a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>
 
 
     </section>
