add link for Blog

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       <a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a>
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>
+      <a href="./BlogMainPage/build/index.html" class="projects-link">Blog</a>
 
 
     </section>
