add project white square

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
+      <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
 
 
     </section>
