add toDo list on javaScript

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="projects">
 
 
-      <h2 class="projects__title">My projects:</h2>
+      <h2 class="projects__title">Layouts projects:</h2>
       <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
       <!--<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>-->
       <!--<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>-->
@@ -131,6 +131,9 @@
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
       <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
+
+      <h2 class="projects__title">JavaScript projects:</h2>
+      <a href="https://github.com/AndreySavchenkov/ToDo-List/blob/master/index.html" class="projects-link">ToDo List</a>
 
 
     </section>
