add project toDo

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
       <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
 
-      <h2 class="projects__title">JavaScript projects:</h2>
-      <a href="https://github.com/AndreySavchenkov/ToDo-List/blob/master/index.html" class="projects-link">ToDo List</a>
+      <h2 class="projects__title jsProjects">JavaScript projects:</h2>
+      <a href="../JavaScriptProjects/index.html" class="projects-link">ToDo List</a>
 
 
     </section>
