--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
 
       <h2 class="projects__title jsProjects">JavaScript projects:</h2>
-      <a href="../js-projects/ToDo-List/index.html" class="projects-link">ToDo List</a>
+      <a href="jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a>
 
 
     </section>
