--- a/howTo/Dog Registry/index.html
+++ b/howTo/Dog Registry/index.html
@@ -28,7 +28,19 @@
                </a>
                <button class="nav__button" type="button">Sign Up</button>
             </nav>
-
+            <div class="header__wrapper">
+                <div class="header__text-wrapper">
+                    <h1 class="header__title">Service Dog and <br>
+                        ESA registration</h1>
+                    <p class="header__subtitle">Register your Service Dog,<br>
+                        Emotional Support Dog, 
+                        or Therapy Dog online</p>
+                    <button type="button" class="header__button">Register Now</button>
+                </div>
+                
+                <img src="img/dogHeader.jpg" alt="dog" class="header__img">
+                
+            </div>
         </header>
 
     </div>
