added link for dog

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
       <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
+      <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry</a>
 
       <h2 class="projects__title jsProjects">JavaScript projects:</h2>
       <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a>
