--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -108,6 +108,77 @@
             <img class="work__line" src="img/line.png" alt="" >
             <img class="work__line2" src="img/line2.png" alt="">
         </article>
+        <article class="registration">
+            <h2 class="registration__title">Registration Packages</h2>
+            <div class="registration__wrapper">
+                <div class="registration__text">
+                    <span class="registration__name">Partial List of Disabilities Covered</span>
+                    <span class="registration__name">Laws Protecting this Type of Dog</span>
+                    <span class="registration__name">Breed/Age/Sex of Dogs</span>
+                    <span class="registration__name">Fly in airplane for free</span>
+                    <span class="registration__name">Allowed in all housing regardless of pet policy</span>
+                    <span class="registration__name">Protected in All 50 States</span>
+                </div>
+                <div class="registration__items-blue">
+                    <div class="registration__item-blue1">
+                        <img src="img/dog-blue.png" alt="" class="registration__img">
+                        <span class="registration__item-title">Service Dog</span>
+                        <p class="registration__item-text">
+                            Service dogs help with performing a function for a person that is limited by a disability.
+                        </p>
+                    </div>
+                    <div class="registration__item-blue2">
+                        <p>
+                            Mobility issues, visual impairment (blindness), hearing impairment (deafness), seizures, 
+                            diabetes, PTSD, autism, epilepsy, multiple sclerosis (MS), and other physical/mental disabilities
+                        </p>
+                    </div>
+                    <div class="registration__item-blue3">
+                        <p>
+                            Americans with Disabilities Act (ADA)
+                        </p>
+                    </div>
+                    <div class="registration__item-blue4">
+                        <p>
+                            Any is acceptable
+                        </p>
+                    </div>
+                    <div class="registration__item-blue5"></div>
+                    <div class="registration__item-blue6"></div>
+                    <div class="registration__item-blue7"></div>
+                </div>
+                <div class="registration__items-red">
+                    <div class="registration__item-red">
+                        <img src="img/dog-red.png" alt="" class="registration__img">
+                        <span class="registration__item-title">Emotional Support Dog</span>
+                        <p class="registration__item-text">
+                            Service dogs help with performing a function for a person that is limited by a disability.
+                        </p>
+                    </div>
+                    <div class="registration__item-red"></div>
+                    <div class="registration__item-red"></div>
+                    <div class="registration__item-red"></div>
+                    <div class="registration__item-red"></div>
+                    <div class="registration__item-red"></div>
+                    <div class="registration__item-red"></div>
+                </div>
+                <div class="registration__items-green">
+                    <div class="registration__item-green">
+                        <img src="img/dog-green.png" alt="" class="registration__img">
+                        <span class="registration__item-title">Therapy Dog</span>
+                        <p class="registration__item-text">
+                            Service dogs help with performing a function for a person that is limited by a disability.
+                        </p>
+                    </div>
+                    <div class="registration__item-green"></div>
+                    <div class="registration__item-green"></div>
+                    <div class="registration__item-green"></div>
+                    <div class="registration__item-green"></div>
+                    <div class="registration__item-green"></div>
+                    <div class="registration__item-green"></div>
+                </div>
+            </div>
+        </article>
 
     </div>
     
