--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -112,14 +112,14 @@
             <h2 class="registration__title">Registration Packages</h2>
             <div class="registration__wrapper">
                 <div class="registration__text">
-                    <span class="registration__name">Partial List of Disabilities Covered</span>
-                    <span class="registration__name">Laws Protecting this Type of Dog</span>
-                    <span class="registration__name">Breed/Age/Sex of Dogs</span>
-                    <span class="registration__name">Fly in airplane for free</span>
-                    <span class="registration__name">Allowed in all housing regardless of pet policy</span>
-                    <span class="registration__name">Protected in All 50 States</span>
+                    <span class="registration__name1">Partial List of Disabilities Covered</span>
+                    <span class="registration__name2">Laws Protecting this Type of Dog</span>
+                    <span class="registration__name3">Breed/Age/Sex of Dogs</span>
+                    <span class="registration__name4">Fly in airplane for free</span>
+                    <span class="registration__name5">Allowed in all housing regardless of pet policy</span>
+                    <span class="registration__name6">Protected in All 50 States</span>
                 </div>
-                <div class="registration__items-blue">
+                <div class="registration__items">
                     <div class="registration__item-blue1">
                         <img src="img/dog-blue.png" alt="" class="registration__img">
                         <span class="registration__item-title">Service Dog</span>
@@ -127,55 +127,73 @@
                             Service dogs help with performing a function for a person that is limited by a disability.
                         </p>
                     </div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue2">
                         <p>
                             Mobility issues, visual impairment (blindness), hearing impairment (deafness), seizures, 
                             diabetes, PTSD, autism, epilepsy, multiple sclerosis (MS), and other physical/mental disabilities
                         </p>
                     </div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue3">
                         <p>
-                            Americans with Disabilities Act (ADA)
+                            Americans with Disabilities Ac-redt (ADA)
                         </p>
                     </div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue4">
                         <p>
                             Any is acceptable
                         </p>
                     </div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue5"></div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue6"></div>
+                    <div class="registration__line"></div>
                     <div class="registration__item-blue7"></div>
                 </div>
-                <div class="registration__items-red">
-                    <div class="registration__item-red">
+                <div class="registration__items">
+                    <div class="registration__item-red1">
                         <img src="img/dog-red.png" alt="" class="registration__img">
                         <span class="registration__item-title">Emotional Support Dog</span>
                         <p class="registration__item-text">
                             Service dogs help with performing a function for a person that is limited by a disability.
                         </p>
                     </div>
-                    <div class="registration__item-red"></div>
-                    <div class="registration__item-red"></div>
-                    <div class="registration__item-red"></div>
-                    <div class="registration__item-red"></div>
-                    <div class="registration__item-red"></div>
-                    <div class="registration__item-red"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red2"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red3"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red4"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red5"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red6"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red7"></div>
                 </div>
-                <div class="registration__items-green">
-                    <div class="registration__item-green">
+                <div class="registration__items">
+                    <div class="registration__item-red1">
                         <img src="img/dog-green.png" alt="" class="registration__img">
                         <span class="registration__item-title">Therapy Dog</span>
                         <p class="registration__item-text">
                             Service dogs help with performing a function for a person that is limited by a disability.
                         </p>
                     </div>
-                    <div class="registration__item-green"></div>
-                    <div class="registration__item-green"></div>
-                    <div class="registration__item-green"></div>
-                    <div class="registration__item-green"></div>
-                    <div class="registration__item-green"></div>
-                    <div class="registration__item-green"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red2"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red3"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red4"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red5"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red6"></div>
+                    <div class="registration__line"></div>
+                    <div class="registration__item-red7"></div>
                 </div>
             </div>
         </article>
