finished style for cetrificate

--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -147,11 +147,20 @@
                         </p>
                     </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-blue5"></div>
+                    <div class="registration__item-blue5">
+                        <img src="img/like.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-blue6"></div>
+                    <div class="registration__item-blue6">
+                        <img src="img/like.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-blue7"></div>
+                    <div class="registration__item-blue7">
+                        <div>
+                            <img src="img/like.png" alt="">
+                        </div>
+                        <button class="registration__button">Get Started</button>
+                    </div>
                 </div>
                 <div class="registration__items">
                     <div class="registration__item-red1">
@@ -162,20 +171,39 @@
                         </p>
                     </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red2"></div>
+                    <div class="registration__item-red2">
+                        <p>
+                            Anxiety, depression, bipolar/mood disorders, panic attacks, and other emotional/psychological conditions
+                        </p>
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red3"></div>
+                    <div class="registration__item-red3">
+                        <p>
+                            Fair Housing Amendments Act Air Carrier Access Act
+                        </p>
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red4"></div>
+                    <div class="registration__item-red4">
+                        Any is acceptable
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red5"></div>
+                    <div class="registration__item-red5">
+                        <img src="img/like.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red6"></div>
+                    <div class="registration__item-red6">
+                        <img src="img/like.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red7"></div>
+                    <div class="registration__item-red7">
+                        <div>
+                            <img src="img/like.png" alt="">
+                        </div>
+                        <button class="registration__button">Get Started</button>
+                    </div>
                 </div>
                 <div class="registration__items">
-                    <div class="registration__item-red1">
+                    <div class="registration__item-green1">
                         <img src="img/dog-green.png" alt="" class="registration__img">
                         <span class="registration__item-title">Therapy Dog</span>
                         <p class="registration__item-text">
@@ -183,17 +211,77 @@
                         </p>
                     </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red2"></div>
+                    <div class="registration__item-green2"></div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red3"></div>
+                    <div class="registration__item-green3"></div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red4"></div>
+                    <div class="registration__item-green4">
+                        <p>
+                            Any is acceptable
+                        </p>
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red5"></div>
+                    <div class="registration__item-green5">
+                        <img src="img/dislike.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red6"></div>
+                    <div class="registration__item-green6">
+                        <img src="img/dislike.png" alt="">
+                    </div>
                     <div class="registration__line"></div>
-                    <div class="registration__item-red7"></div>
+                    <div class="registration__item-green7">
+                        <p>
+                            <div>
+                                <img src="img/dislike.png" alt="">
+                            </div>
+                            <button class="registration__button">Get Started</button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="certificate">
+            <div class="certificate__name">
+                <div>
+                    <h3 class="certificate__title">Real Identification Card <br>
+                        and Certificate</h3>
+                    <p class="certificate__text">
+                        The Animal Identification Number is the equivalent
+                        of a social <br>security number or vehicle identification number for animals.
+                    </p>
+                    <button class="certificate__button">Register Now</button>
+                </div>
+                <div>
+                    <p class="certification__name">Certificate</p>
+                </div>
+            </div>
+            <div class="certificate__items">
+                <div class="certificate__item">
+                    <div>
+                        <img src="img/certificate1.png" alt="">
+                    </div>
+                    <span>Identification Card</span>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                    </p>
+                </div>
+                <div class="certificate__item">
+                    <div>
+                        <img src="img/certificate2.png" alt="">
+                    </div>
+                    <span>Registration Certificate</span>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                    </p>
+                </div>
+                <div class="certificate__item">
+                    <div>
+                        <img src="img/certificate3.png" alt="">
+                    </div>
+                    <span>24/7 Online Verification</span>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                    </p>
                 </div>
             </div>
         </article>
