--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -285,6 +285,46 @@
                 </div>
             </div>
         </article>
+        <article class="understand">
+            <h2 class="understand__title">Understand the Laws</h2>
+            <p class="understand__text">
+                It’s important to understand all laws and state regulation in regards to Service and <br>
+                Emotional Support animals. Know your rights!
+            </p>
+            <div class="understand__items">
+                <div class="understand__item">
+                    <div class="understand__header">
+                        <img src="img/understand.png" alt="" class="understand__img">
+                        <p class="understand__name">
+                            Service Animal
+                        </p>
+                    </div>
+                    <p class="understand__big-text">
+                        Under the ADA, State and local governments, businesses, and nonprofit organizations 
+                        that serve the public generally must allow service animals to accompany people with 
+                        disabilities in all areas of the facility where the public is allowed to go.
+                    </p>
+                </div>
+                <div class="understand__item">
+                    <div class="understand__header">
+                        <img src="img/understand2.png" alt="" class="understand__img">
+                        <p class="understand__name">
+                            ESA
+                        </p>
+                    </div>
+                    <p class="understand__big-text">
+                        Under the FHA, a disability is defined as a physical or mental impairment which 
+                        significantly limits a person’s major life activities. Even if a lease says "no 
+                        pets" or restricts pets, landlords are required to make what is called a “reasonable 
+                        accommodation” to allow pets who serve as assistance animals, which includes animals 
+                        who provide emotional support.
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="choose">
+            
+        </article>
 
     </div>
     
