style for chose article

--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -323,7 +323,23 @@
             </div>
         </article>
         <article class="choose">
-            
+            <h2 class="choose__title">Why Choose Us?</h2>
+            <p class="choose__text">
+                By using Federal Dog Registry you can be confident that you can bring your <br> 
+                animal with you anywhere you go.
+            </p>
+            <div class="choose__wrapper">
+                <div class="choose__img-wrapper">
+                    <img src="img/choose.png" alt="">
+                </div>
+                
+                <ul class="choose__text-wrapper">
+                    <li>Instant Registration</li>
+                    <li>Licensed Therapists in all 50 States</li>
+                    <li>24/7 Online Registration Verification</li>
+                    <li>Valid in all 50 US States</li>
+                </ul>
+            </div>
         </article>
 
     </div>
