--- a/howTo/DogRegistry/index.html
+++ b/howTo/DogRegistry/index.html
@@ -341,6 +341,20 @@
                 </ul>
             </div>
         </article>
+        <article class="fluing">
+            <div class="fluing__text-inner">
+                <h2 class="fluing__text-title">Flying with a Dog</h2>
+                <p class="fluing__text-subtext">
+                    Travel with your animal by your side with no extra fees or <br>
+                    restrictions. To learn more about specific airline requirements <br>
+                    click the button down below.
+                </p>
+                <button class="fluing__button">Learn More</button>
+            </div>
+            <div class="fluing__img-inner">
+                <img src="img/fluing.png" alt="" class="fluing__img"> 
+            </div>
+        </article>
 
     </div>
     
