--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a> 
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
       <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
-      <a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a>
+      <!--<a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a> -->
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
