--- a/things-for-site/adaptiv-menu/index.html
+++ b/things-for-site/adaptiv-menu/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="http://code.jquery.com/jquery-3.5.1.js"></script>
     <title>Document</title>
+    <script>
+        $(document).ready(function(){
+            $('#icon').click(function(){
+                $('ul').toggleClass('show');
+            })
+        });
+    </script>
 </head>
 <body>
     <nav>
@@ -21,5 +29,6 @@
             <i class="fas fa-bars"></i>
         </label>
     </nav>
+    <section></section>
 </body>
 </html>
