--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
       <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
       <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
       <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
-      <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
-      <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a> 
+      <!-- <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a> -->
+      <!-- <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>  -->
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
       <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
       <!--<a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a> -->
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
-      <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a>
+      <!-- <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a> -->
       <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry</a>
 
-      <h2 class="projects__title jsProjects">JavaScript projects:</h2>
-      <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a>
+      <!-- <h2 class="projects__title jsProjects">JavaScript projects:</h2>
+      <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a> -->
 
 
     </section>
