--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
       <!-- <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a> -->
       <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry</a>
+      <a href="../howTo/page/bro/index.html" class="projects-link">Business Card</a>
 
       <!-- <h2 class="projects__title jsProjects">JavaScript projects:</h2>
       <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a> -->
