changed link for my site

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
       <h2 class="projects__title">Layouts projects:</h2>
-      <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
+      <a class="projects-link" href="../mogo/index.html">"MoGo" site layout (without mobile version)</a>
       <!--<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>-->
       <!--<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>-->
       <!-- <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a> -->
@@ -119,19 +119,19 @@
       <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
       <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
       <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a> -->
-      <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
-      <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
+      <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House (without mobile version)</a>
+      <!-- <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a> -->
       <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
       <!-- <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a> -->
       <!-- <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>  -->
       <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
-      <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a>
+      <!-- <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a> -->
       <!--<a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a> -->
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
-      <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
+      <a href="../howTo/page/blog/index.html" class="projects-link">Blog (without mobile version)</a>
       <!-- <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a> -->
-      <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry</a>
+      <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry (without mobile version)</a>
       <a href="../howTo/page/bro/index.html" class="projects-link">Business Card</a>
 
       <!-- <h2 class="projects__title jsProjects">JavaScript projects:</h2>
