--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
       <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
       <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
       <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a> -->
-      <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House (without mobile version)</a>
+      <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
       <!-- <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a> -->
-      <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
+      <a href="../howTo/page/minto/index.html" class="projects-link">Minto (Adaptive layout)</a>
       <!-- <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a> -->
       <!-- <a href="../howTo/page/testBootstrap/index.html" class="projects-link">Use Bootstrap</a>  -->
-      <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom</a>
+      <a href="../howTo/page/evrodom/index.html" class="projects-link">Evrodom (Adaptive layout)</a>
       <!-- <a href="../howTo/page/SoundMusic/index.html" class="projects-link">Sound Music</a> -->
       <!--<a href="https://andreysavchenkov.wordpress.com/" class="projects-link">My Wordpress Website</a> -->
       <!--<a href="../howTo/page/ShapeUp/index.html" class="projects-link">ShapeUp</a>-->
       <!--<a href="../howTo/page/HipsumBlog/index.html" class="projects-link">Hipsum Blog</a>-->
-      <a href="../howTo/page/blog/index.html" class="projects-link">Blog (without mobile version)</a>
+      <a href="../howTo/page/blog/index.html" class="projects-link">Blog</a>
       <!-- <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a> -->
-      <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry (without mobile version)</a>
-      <a href="../howTo/page/bro/index.html" class="projects-link">Business Card</a>
+      <a href="../howTo/DogRegistry/index.html" class="projects-link">Dog Registry</a>
+      <a href="../howTo/page/bro/index.html" class="projects-link">Business Card (Adaptive layout)</a>
 
       <!-- <h2 class="projects__title jsProjects">JavaScript projects:</h2>
       <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a> -->
