--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
       <h2 class="projects__title">Layouts projects:</h2>
-      <a class="projects-link" href="/howTo/page/bislite/index.html">BisLite</a>
+      <a class="projects-link" href="/howTo/page/bislite/index.html">BisLite (Adaptive layout)</a>
       <a class="projects-link" href="/howTo/page/jetro/index.html">Jetro</a>
       <!-- <a class="projects-link" href="../mogo/index.html">"MoGo" site layout (without mobile version)</a> -->
       <!--<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>-->
