added site with use only bootstrap

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       <!-- <a href="../howTo/page/whiteSquare/index.html" class="projects-link">White Square</a> -->
       <a href="../howTo/DogRegistry/index.html" target ="_blank" class="projects-link">Dog Registry</a>
       <a href="../howTo/page/bro/index.html" target ="_blank" class="projects-link">Business Card (Adaptive layout)</a>
+      <a href="../howTo/page/mySiteOnlyBootstrap/index.html" target ="_blank" class="projects-link">My Second Site(Only Bootstrap)</a>
 
       <!-- <h2 class="projects__title jsProjects">JavaScript projects:</h2>
       <a href="/jsProjects/ToDoList/index.html" class="projects-link">ToDo List</a> -->
